--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,11 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        //Realm実装
+        classpath "io.realm:realm-gradle-plugin:5.8.0"
     }
+
 }
 
 allprojects {
